add skip button

--- a/hotspot-templates/encuesta-calificacion.html
+++ b/hotspot-templates/encuesta-calificacion.html
@@ -57,6 +57,11 @@
             </label>
         </div>
       </form>
+      <div class="skip">
+        <button class="btn btn-primary">
+          Skip
+        </button>
+      </div>
   </div>
 </main>
 <!-- dependencias solo para LightBox en promociones -->
