add skip button

--- a/hotspot-templates/encuesta-calificacion.html
+++ b/hotspot-templates/encuesta-calificacion.html
@@ -57,11 +57,13 @@
             </label>
         </div>
       </form>
-      <div class="skip">
-        <button class="btn btn-primary">
-          Skip
-        </button>
-      </div>
+  </div>
+  <div class="main__test__bottom">
+    <div class="skip text-center">
+      <button class="btn btn-rounded btn-rounded--lg">
+        Skip
+      </button>
+    </div>
   </div>
 </main>
 <!-- dependencias solo para LightBox en promociones -->
@@ -69,7 +71,10 @@
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
+  <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-steps/1.1.0/jquery.steps.min.js"></script>
   <script src="http://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html> 
