--- a/hotspot-templates/form-spa-stepone.html
+++ b/hotspot-templates/form-spa-stepone.html
@@ -10,16 +10,12 @@
 </head>
 <body> 
 
-<main class="main-section oh">
+<main class="main-section goc">
     <header class="header">
   <div class="header__path">
       <div class="header__path__inner">
           <div class="header__path__overlay">
-            <img class="header__path__image" src='./img/logos/oh.svg' alt=''/>
-            
-              <div class="icono">
-                <img src="./img/icons/wifi-icon.png" alt="">
-              </div>
+            <img class="header__path__image" src='./img/logos/goc.svg' alt=''/>
             
           </div>
       </div>
@@ -27,34 +23,28 @@
 </header>
   <div class="main-section__wrap">
       <section class="main-section__inner">
-        <div class="lang-box">
+        <!-- <div class="lang-box">
           <a class="btn lang-box-item">EN</a>
           <a class="btn selected lang-box-item">ES</a>
-        </div>
-        <h1 class="title mb-60">Seleccione un método de inicio de sesión</h1>
-        <div class="methods-box text-center">
-          <div class="method-box methods-box__one">
-              <a href="#" class="btn btn-block">
-                  CARGO A MI TARJETA DE CRÉDITO
-              </a>
-              <p>*Se requiere información de la tarjeta</p>
-          </div>  
-          <div class="method-box methods-box__two">
-              <a href="#" class="btn btn-block">
-                  CÓDIGO DE ACCESO
-              </a>
-              <p>*Disponible en el Lobby (Máquina expendedora)</p>
+        </div> -->
+        <h1 class="title mb-40">Sensoria</h1>
+        <div class="main-section__spa-promo wrap-container">
+          <div class="main-section__spa-promo__item">
+            <h3 class="title-promo">Romantico <span> de $4,030 MXN a:</span></h3>
+            <p><span>$3,090 MXN</span> <i>Por Pareja</i></p>
+            <div>
+              <a href="#" class="btn btn-big btn-reverse mt-20 no-margin-md">Reservar</a>
+            </div>
+          </div>
+          <div class="main-section__spa-promo__item">
+            <h3 class="title-promo">Piel Joven <span>de $3,985 MXN a:</span></h3>
+            <p><span>$2,450 MXN</span> <i>Por Pareja</i></p>
+            <div>
+              <a href="#" class="btn btn-big btn-reverse mt-20">Reservar</a>
+            </div>
           </div>
         </div>
-        <div class="skip text-center mt-10">
-            <button class="btn btn-xs btn-primary">skip</button>
-        </div>
       </section>
-  <footer class="footer">
-    <div class="alert alert-goc">
-        Para soporte técnico marque al #200
-    </div>
-</footer> 
   </div>
 </main>
 <!-- dependencias solo para LightBox en promociones -->
