--- a/hotspot-templates/gos.html
+++ b/hotspot-templates/gos.html
@@ -27,6 +27,10 @@
 </header>
   <div class="main-section__wrap gos">
       <section class="main-section__inner">
+        <div class="lang-box">
+          <a class="btn lang-box-item">EN</a>
+          <a class="btn selected lang-box-item">ES</a>
+        </div>
         <h1 class="title mb-60">Seleccione un método de inicio de sesión</h1>
         <div class="methods-box text-center">
           <div class="method-box methods-box__one">
@@ -42,6 +46,9 @@
               <p>*Disponible en el Lobby (Máquina expendedora)</p>
           </div>
         </div>
+        <div class="skip text-center mt-10">
+            <button class="btn btn-xs btn-primary">skip</button>
+        </div>
       </section>
   <footer class="footer">
     <div class="alert alert-goc">
@@ -55,7 +62,10 @@
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
+  <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-steps/1.1.0/jquery.steps.min.js"></script>
   <script src="http://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html> 
